--- a/app/package.json
+++ b/app/package.json
@@ -24,6 +24,7 @@
     "react-native-keyboard-manager": "^4.0.13-7",
     "react-native-message-bar": "^2.0.10",
     "react-native-open-setting": "^1.0.3",
+    "react-native-push-notification": "^3.1.2",
     "react-native-router-flux": "^4.0.0-beta.28",
     "react-native-simple-radio-button": "^2.7.3",
     "react-native-splash-screen": "^3.0.6",
