user will get notification after 24 hours on submit question's response done

--- a/app/android/build.gradle
+++ b/app/android/build.gradle
@@ -13,22 +13,39 @@ buildscript {
     }
     dependencies {
         // classpath 'com.android.tools.build:gradle:2.2.3'
-            classpath 'com.android.tools.build:gradle:3.0.1'
+                  classpath 'com.android.tools.build:gradle:3.2.0'
+                   classpath 'com.google.gms:google-services:4.2.0'
+
     }
 }
 
 allprojects {
     repositories {
+     google()
         mavenLocal()
         jcenter()
-        maven { url "https://jitpack.io" }
+     
         maven {
             url 'https://maven.google.com/'
             name 'Google'
         }
+        maven { url "https://jitpack.io" }
+    
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
             url "$rootDir/../node_modules/react-native/android"
         }
-    }
 }
+}
+
+// ext {
+//     googlePlayServicesVersion = "<Your play services version>" // default: "+"
+//     firebaseVersion = "<Your Firebase version>" // default: "+"
+
+//     // Other settings
+//     compileSdkVersion 27
+//     buildToolsVersion "27.0.1"
+//         targetSdkVersion 22
+
+//     supportLibVersion = "<Your support lib version>" // default: 23.1.1
+// }
