--- a/app/android/app/build.gradle
+++ b/app/android/app/build.gradle
@@ -95,14 +95,21 @@ def enableProguardInReleaseBuilds = false
 
 android {
     compileSdkVersion 27
-    buildToolsVersion "27.0.1"
+    buildToolsVersion "26.0.2"
 
     defaultConfig {
         applicationId "com.app"
-        minSdkVersion 16
-        targetSdkVersion 22
-        versionCode 1
-        versionName "1.0"
+        minSdkVersion 21
+        targetSdkVersion 26
+        // minSdkVersion 16
+        // targetSdkVersion 22
+        // versionCode 1
+        // versionName "1.0"
+        // ndk {
+        //     abiFilters "armeabi-v7a", "x86"
+        // }
+              versionCode 3
+        versionName "2.1"
         ndk {
             abiFilters "armeabi-v7a", "x86"
         }
@@ -151,9 +158,9 @@ android {
 }
 
 dependencies {
-    compile project(':react-native-push-notification')
-    compile fileTree(dir: "libs", include: ["*.jar"])
+   compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
+    compile project(':react-native-push-notification')
     compile "com.facebook.react:react-native:+"  // From node_modules
 }
 
@@ -163,3 +170,5 @@ task copyDownloadableDepsToLibs(type: Copy) {
     from configurations.compile
     into 'libs'
 }
+
+
