--- a/app/android/app/build.gradle
+++ b/app/android/app/build.gradle
@@ -94,15 +94,15 @@ def enableSeparateBuildPerCPUArchitecture = false
 def enableProguardInReleaseBuilds = false
 
 android {
-    compileSdkVersion 27
-    buildToolsVersion "27.0.1"
+     compileSdkVersion 28
+    buildToolsVersion "28.0.3"
 
     defaultConfig {
         applicationId "com.app"
-        minSdkVersion 16
-        targetSdkVersion 22
-        versionCode 1
-        versionName "1.0"
+     minSdkVersion 21
+         targetSdkVersion 28
+        versionCode 3
+        versionName "2.1"
         ndk {
             abiFilters "armeabi-v7a", "x86"
         }
@@ -148,12 +148,21 @@ android {
             }
         }
     }
+         lintOptions {
+        checkReleaseBuilds false
+    }
 }
 
 dependencies {
-    compile fileTree(dir: "libs", include: ["*.jar"])
-    compile "com.android.support:appcompat-v7:23.0.1"
-    compile "com.facebook.react:react-native:+"  // From node_modules
+    implementation fileTree(dir: "libs", include: ["*.jar"])
+        implementation "com.android.support:appcompat-v7:28.0.0"
+    implementation  fileTree(dir: "libs", include: ["*.jar"])
+
+    implementation project(':react-native-push-notification')
+    //    implementation("com.android.support:support-media-compat:28.0.0")
+    //     implementation("com.android.support:support-v4:28.0.0")
+
+    implementation "com.facebook.react:react-native:+"  // From node_modules
 }
 
 // Run this once to be able to run the application with BUCK
