--- a/app/android/settings.gradle
+++ b/app/android/settings.gradle
@@ -1,3 +1,9 @@
 rootProject.name = 'app'
 
 include ':app'
+rootProject.name = 'app'
+
+include ':react-native-push-notification'
+project(':react-native-push-notification').projectDir = file('../node_modules/react-native-push-notification/android')
+
+include ':app'
