--- a/app/android/app/build.gradle
+++ b/app/android/app/build.gradle
@@ -153,6 +153,7 @@ android {
 dependencies {
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
+    implementation project(':react-native-push-notification')
     compile "com.facebook.react:react-native:+"  // From node_modules
 }
 
