--- a/app/android/app/build.gradle
+++ b/app/android/app/build.gradle
@@ -152,10 +152,10 @@ android {
 
 dependencies {
     compile fileTree(dir: "libs", include: ["*.jar"])
+        compile project(':react-native-push-notification')
     compile "com.android.support:appcompat-v7:23.0.1"
-          implementation("com.android.support:support-media-compat:28.0.0")
-        implementation("com.android.support:support-v4:28.0.0")
-    implementation project(':react-native-push-notification')
+        //   implementation("com.android.support:support-media-compat:28.0.0")
+        // implementation("com.android.support:support-v4:28.0.0")
     compile "com.facebook.react:react-native:+"  // From node_modules
 }
 
