--- a/app/android/build.gradle
+++ b/app/android/build.gradle
@@ -12,23 +12,44 @@ buildscript {
         }
     }
     dependencies {
-        // classpath 'com.android.tools.build:gradle:2.2.3'
-            classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'com.android.tools.build:gradle:3.0.1'
     }
 }
 
 allprojects {
     repositories {
+     google()
         mavenLocal()
         jcenter()
-        maven { url "https://jitpack.io" }
+     
         maven {
             url 'https://maven.google.com/'
             name 'Google'
         }
+        maven { url "https://jitpack.io" }
+    
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
             url "$rootDir/../node_modules/react-native/android"
         }
-    }
 }
+}
+
+
+
+
+
+// subprojects {
+//   project.configurations.all {
+//      resolutionStrategy.eachDependency { details ->
+//         if (details.requested.group == 'com.android.support'
+//               && !details.requested.name.contains('multidex') ) {
+//            details.useVersion "27.1.1"
+//         }
+//      }
+//   }
+// }
+
+// task clean(type: Delete) {
+//     delete rootProject.buildDir
+// }
