--- a/app/package.json
+++ b/app/package.json
@@ -26,6 +26,7 @@
     "react-native-open-setting": "^1.0.3",
     "react-native-router-flux": "^4.0.0-beta.28",
     "react-native-simple-radio-button": "^2.7.3",
+    "react-native-push-notification": "^3.1.2",
     "react-native-splash-screen": "^3.0.6",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
